# google_test_demo

L1_simple/: CMakeLists.txt  make_all.sh
L1_simple/include/: demo.h
L1_simple/src/: demo.cpp
L1_simple/test/: unit_test.cpp  unit_test_2.cpp
